初始化，安裝套件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,26 @@
     {
       "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+  "include": [
+    "types/module.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "vite.config.ts",
+    "vite/**/*.ts",
+    "mock/**/*.ts",
+    "types/**/*.d.ts",
+    "types/**/*.ts"
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "#/*": ["./src/assets/*"]
+    },
+    "composite": true,
+    "types": ["node"]
+    // "module": "es2022"
+  },
+  "types": ["element-plus/global", "lodash-es"]
 }
