--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,9 @@
     "src/**/*.vue",
     "vite.config.ts",
     "vite/**/*.ts",
-    "mock/**/*.ts",
     "types/**/*.d.ts",
-    "types/**/*.ts"
+    "types/**/*.ts",
+    "types/components.d.ts"
   ],
   "compilerOptions": {
     "baseUrl": ".",
