--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.0",
-    "axios": "^1.4.0",
     "element-plus": "^2.3.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
@@ -29,15 +28,18 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/runtime-core": "^3.2.47",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.14",
+    "axios": "1.2.0-alpha.1",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
+    "pinia-persistedstate-plugin": "^0.1.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.4",
     "rollup-plugin-visualizer": "^5.9.0",
@@ -48,7 +50,7 @@
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vitest": "^0.29.1",
+    "vitest": "^0.30.1",
     "vue-tsc": "^1.2.0"
   }
 }
