--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -4,7 +4,9 @@
   "compilerOptions": {
     "composite": true,
     "lib": [],
-    "types": ["node", "jsdom"]
+    "types": ["node", "jsdom"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "types/module.d.ts",
