--- a/package.json
+++ b/package.json
@@ -35,15 +35,19 @@
     "autoprefixer": "^10.4.14",
     "axios": "1.2.0-alpha.1",
     "eslint": "^8.34.0",
+    "eslint-plugin-tailwindcss": "^3.11.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
-    "pinia-persistedstate-plugin": "^0.1.0",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.62.1",
+    "stylelint": "^15.6.0",
+    "stylelint-config-standard": "^33.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^0.15.3",
@@ -51,6 +55,7 @@
     "vite": "^4.1.4",
     "vite-plugin-svg-icons": "^2.0.1",
     "vitest": "^0.30.1",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.2.0",
+    "vue3-lottie": "^2.7.0"
   }
 }
