--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
     "@types/lodash-es": "^4.17.7",
@@ -34,6 +35,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.14",
     "axios": "1.2.0-alpha.1",
+    "dayjs": "^1.11.7",
     "eslint": "^8.34.0",
     "eslint-plugin-tailwindcss": "^3.11.0",
     "eslint-plugin-vue": "^9.9.0",
