--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.14",
     "axios": "1.2.0-alpha.1",
+    "axios-retry": "^3.4.0",
     "dayjs": "^1.11.7",
     "eslint": "^8.34.0",
     "eslint-plugin-tailwindcss": "^3.11.0",
