--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_APP_TITLE = "pro"
-VITE_BASEURL=https://nestjs-a596116.vercel.app/
+VITE_BASEURL=http://192.168.50.83:3000
 VITE_WEB_TITLE="HaoDai"
