--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 VITE_APP_TITLE = "dev"
-VITE_BASEURL=http://127.0.0.1:3000/
+VITE_BASEURL=https://api.wanghaodai.com/
 # VITE_BASEURL=https://nestjs-a596116.vercel.app/
 VITE_WEB_TITLE="HaoDai"
