--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 VITE_APP_TITLE = "dev"
-# VITE_BASEURL=https://api.wanghaodai.com
-VITE_BASEURL="http://103.159.206.233:3005"
+VITE_BASEURL=http://127.0.0.1:3005
+# VITE_BASEURL="http://103.159.206.233:3005"
 # VITE_BASEURL=https://nestjs-a596116.vercel.app/
 VITE_WEB_TITLE="HaoDai"
