--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_APP_TITLE = "pro"
-VITE_BASEURL="http://103.159.206.233:3005"
+VITE_BASEURL="http://api.wanghaodai.com"
 VITE_WEB_TITLE="HaoDai"
