--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_ROUTER_AUTOLOAD=false
 VITE_API_URL="/api"
-VITE_BASEURL=https://api.wanghaodai.com
+# VITE_BASEURL=https://api.wanghaodai.com
 VITE_WEB_TITLE="HaoDai"
