--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "element-plus": "^2.3.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-cropper": "^1.0.8",
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.1.0",
