--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 VITE_APP_TITLE = "dev"
 # VITE_BASEURL=http://127.0.0.1:3005
 VITE_BASEURL="http://192.168.50.109:3005"
+# VITE_BASEURL="https://api.twhaodai.com
+
 VITE_WEB_TITLE="HaoDai"
