--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "1.2.0-alpha.1",
     "axios-retry": "^3.4.0",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.7",
     "eslint": "^8.34.0",
     "eslint-plugin-tailwindcss": "^3.11.0",
@@ -61,6 +62,7 @@
     "vite-plugin-svg-icons": "^2.0.1",
     "vitest": "^0.30.1",
     "vue-tsc": "^1.2.0",
+    "vue3-cookies": "^1.0.6",
     "vue3-lottie": "^2.7.0"
   }
 }
