--- a/package.json
+++ b/package.json
@@ -13,55 +13,56 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vueuse/core": "^10.1.0",
-    "element-plus": "^2.3.4",
-    "pinia": "^2.0.32",
-    "vue": "^3.2.47",
-    "vue-cropper": "^1.0.8",
-    "vue-router": "^4.1.6",
-    "vuedraggable": "^4.1.0"
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
+    "@element-plus/icons-vue": "^2.3.1",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@types/jsdom": "^21.1.0",
-    "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.14.2",
+    "@types/jsdom": "^21.1.6",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^18.19.9",
     "@types/tailwindcss": "^3.1.0",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/runtime-core": "^3.2.47",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/runtime-core": "^3.4.15",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^10.7.2",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.14",
     "axios": "1.2.0-alpha.1",
     "axios-retry": "^3.4.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.7",
+    "element-plus": "^2.5.3",
     "eslint": "^8.34.0",
     "eslint-plugin-tailwindcss": "^3.11.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.1.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.62.1",
+    "sortablejs": "^1.15.2",
     "stylelint": "^15.6.0",
     "stylelint-config-standard": "^33.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.1.4",
+    "vite": "^4.5.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vitest": "^0.30.1",
-    "vue-tsc": "^1.2.0",
+    "vue-cropper": "^1.1.1",
+    "vue-tsc": "^1.8.27",
     "vue3-cookies": "^1.0.6",
     "vue3-lottie": "^2.7.0"
   }
