--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 VITE_APP_TITLE = "dev"
-# VITE_BASEURL=http://127.0.0.1:3005
+# VITE_BASEURL=http://127.0.0.1:3005/api/
 # VITE_BASEURL="http://192.168.50.109:3005"
-VITE_BASEURL="https://api.twhaodai.com
+VITE_BASEURL=""https://api.twhaodai.com/api"
 
 
 VITE_WEB_TITLE="HaoDai"
