--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_APP_TITLE = "pro"
-VITE_BASEURL="https://api.twhaodai.com"
+VITE_BASEURL="https://api.twhaodai.com/api"
 VITE_WEB_TITLE="HaoDai"
