--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@vueuse/core": "^10.7.2",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.14",
-    "axios": "1.2.0-alpha.1",
+    "axios": "^1.6.7",
     "axios-retry": "^3.4.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.7",
